# invalidabi

./: .gitignore  README.md  contract2.abi.invalid
contract1/: CMakeLists.txt  README.txt
contract1/include/: contract1.hpp
contract1/src/: CMakeLists.txt  contract1.cpp
contract2/: CMakeLists.txt  README.txt
contract2/include/: contract2.hpp
contract2/src/: CMakeLists.txt  contract2.cpp
